# mt-lang

./: .gitattributes  .gitignore  .repomixignore  AGENTS.md  AUTHORS  Gemfile  LICENSE  README.md  Rakefile  meson.build  milk_tea.gemspec  repomix.config.json  test_references.rb
config/: upstream_versions.yml
docs/: architecture-dependency-audit.md  bootstrap-design.md  build-guide.md  compile-time.md  dap-design.md  declaration-attributes.md  event-declarations.md  foreign-call-ergonomics.md  grammar.ebnf  index.html  language-design.md  language-manual.md  lexer-contract.md  lsp-design.md  multiplayer-enet-implementation-plan.md  multiplayer-lockstep-rfc.md  multiplayer-networking-rfc.md  multiplayer-standard-library.md  package-manager-roadmap.md  raygui-icon-ownership.md  raylib-examples-plan.md  self-host-gap-analysis.md  self-host-plan.md  selfhost-plan.md  selfhost-report.md  selfhost.md  stateful-event-subscriptions.md  testing.md
examples/: anonymous-functions.mtl  async_lobby_crash.mt  async_network_lobby.mt  async_stress_test  async_stress_test.mt  async_stress_test.mtdbg.json  basic.mtl  data_structures.mt  event_stress_test.mt  integration_test.mt  language_baseline  language_baseline.html  language_baseline.mt  language_baseline.mt.bak  language_baseline.mtdbg.json  language_standard.mt  memory-stress-1.mtl  memory-stress-2.mtl  memory_stress_test.mt  milk-tea-demo.mt  mt26-standard.mtl  multithreading_test.mt  nested_struct_stress_test.mt  nullable_and_variant_test.mt  opengl-glfw-clear.mtl  option_and_result_surface.mt  reflection_advanced.mt  (+3 more)
(+2013 files in other folders)
